# ai-coding-portfolio

./: .gitignore  CONTRIBUTING.md  PROJECTS.md  README.md
.github/workflows/: ci.yml
docs/: learning-path.md
docs/adr/: 001-why-fastapi.md  002-security-patterns.md
projects/01-smart-mailbox/: .env.example  .gitignore  CHANGELOG.md  DESIGN_DECISIONS.md  README.md  SPEC.md  THREAT_MODEL.md  pyproject.toml  requirements.txt
projects/01-smart-mailbox/client/: main.py
projects/01-smart-mailbox/common/: protocol.py
projects/01-smart-mailbox/docs/: decisions.md
projects/01-smart-mailbox/scripts/: run_server_a.sh  run_server_b.sh
projects/01-smart-mailbox/server/: config.py  main.py
projects/01-smart-mailbox/tests/: test_protocol.py  test_walking_skeleton.py
scripts/: create-project.sh
templates/base-python/: .env.example  .pre-commit-config.yaml  Dockerfile  README.template.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
templates/base-python/docs/: decisions.md
templates/base-python/src/: __init__.py  main.py
templates/base-python/tests/: conftest.py  test_main.py
templates/prompts/: prompt-template.md
